# githubtakeout

./: .gitignore  LICENSE  README.md  githubtakeout.py  pyproject.toml  requirements.txt  test_githubtakeout.py  tox.ini
src/: githubtakeout.py  progress.py  test_githubtakeout.py
tests/: test_githubtakeout.py
